cluster/infrastructure/valkey/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: valkey
    app.kubernetes.io/version: 9-alpine3.22
  name: valkey
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: valkey
  template:
    metadata:
      labels:
        app.kubernetes.io/name: valkey
        app.kubernetes.io/version: 9-alpine3.22
    spec:
      automountServiceAccountToken: false
      containers:
      - image: valkey/valkey:9-alpine3.22
        name: valkey
        ports:
        - containerPort: 6379
          name: valkey
        volumeMounts:
        - mountPath: /data
          name: valkey-volume
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
      - args:
        - --redis.addr=redis://localhost:6379
        image: oliver006/redis_exporter:v1.92.1
        name: redis-exporter
        ports:
        - containerPort: 9121
          name: redis-exporter
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 100m
            memory: 64Mi
      volumes:
      - name: valkey-volume
        persistentVolumeClaim:
          claimName: valkey-pvc
