cluster/infrastructure/valkey/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: valkey
    app.kubernetes.io/version: 9-alpine3.22
  name: valkey
spec:
  selector:
    app.kubernetes.io/name: valkey
  ports:
  - name: tcp-valkey
    port: 6379
    targetPort: 6379
